--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Alex Edwards - Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="assets/css/global.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/background.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -45,7 +46,9 @@
         </div>
         <div class="row">
             <div class="column">
-                <a href="my-work.html"><button class="btn btn-outline-light">My Work</button></a>
+                <a href="my-work.html">
+                    <button class="btn-white">My Work</button>
+                </a>
             </div>
         </div>
   	</div>
