Added dates to projects

--- a/my-work.html
+++ b/my-work.html
@@ -56,6 +56,7 @@
                         <img src="assets/img/work/siliconrepairs.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Silicon Repairs</h5>
+                            <h6>2019-ongoing</h6>
                             <button class="btn-white" type="button" onclick="window.open('https://siliconrepairs.co.uk', '_blank' ).focus();">Visit</button>
                             <button class="btn-white-alt" type="button" style="margin-left: 0.2vw;" data-bs-toggle="modal" data-bs-target="#siliconRepairsModal">About</button>
                         </div>
@@ -67,6 +68,7 @@
                         <img src="assets/img/work/yourpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Your Pizza</h5>
+                            <h6>2021</h6>
                             <button class="btn-white" type="button" onclick="window.open('https://yp.alexwjedwards.co.uk', '_blank' ).focus();">Visit</button>
                             <button class="btn-white-alt" type="button" style="margin-left: 0.2vw;" data-bs-toggle="modal" data-bs-target="#yourPizzaModal">About</button>
                         </div>
