--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
-    <div class="area" >
+    <div class="area">
         <ul class="circles">
             <li></li>
             <li></li>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="column">
+            <div class="col">
                 <a href="my-work.html">
                     <button class="btn-white">My Work</button>
                 </a>
