--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/background.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="area">
@@ -25,29 +26,26 @@
     </div>
 
    	<div align="center" class="context text-white">
-    	<h1>Alex Edwards</h1>
-        <h5>Full-stack Developer</h5>
+    	<h1 class="animate__animated animate__backInLeft">Alex Edwards</h1>
+        <h5 class="animate__animated animate__backInRight">Full-stack Developer</h5>
         <div class="row" style="font-size: 2em; margin-top: -0.25vh; padding-bottom: 0.5vh; width: 20vw;">
             <div class="col">
-                <i class="fab fa-php"></i>
+                <i class="fab fa-php animated-icon visually-hidden"></i>
             </div>
             <div class="col">
-                <i class="fab fa-html5"></i>
+                <i class="fab fa-html5 animated-icon visually-hidden"></i>
             </div>
             <div class="col">
-                <i class="fab fa-css3-alt"></i>
+                <i class="fab fa-css3-alt animated-icon visually-hidden"></i>
             </div>
             <div class="col">
-                <i class="fab fa-js-square"></i>
-            </div>
-            <div class="col">
-                <i class="fab fa-microsoft"></i>
+                <i class="fab fa-js-square animated-icon visually-hidden"></i>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <a href="my-work.html">
-                    <button class="btn-white">My Work</button>
+                    <button class="btn-white visually-hidden" id="myWorkButton">My Work</button>
                 </a>
             </div>
         </div>
@@ -57,6 +55,35 @@
 
 
 </body>
+<script>
+    const elements = document.querySelectorAll('.animated-icon');
+
+    async function animateSequentially() {
+        for (let element of elements) {
+            // Wait for page animations to complete
+            await new Promise(resolve => setTimeout(resolve, 600));
+            // Wait for previous animation to complete
+            await new Promise(resolve => {
+                element.classList.remove('visually-hidden');
+                element.classList.add('animate__animated', 'animate__bounceIn');
+                element.style.setProperty('--animate-duration', '0.3s');
+                element.addEventListener('animationend', () => {
+                    resolve();
+                }, { once: true });
+            });
+            // Add small delay between animations
+            await new Promise(resolve => setTimeout(resolve, 200));
+        }
+
+        const workButton = document.getElementById('myWorkButton');
+        workButton.classList.remove('visually-hidden');
+        workButton.classList.add('animate__animated', 'animate__bounceIn');
+        workButton.style.setProperty('--animate-duration', '0.5s');
+    }
+
+    // Start the animation sequence when page loads
+    window.addEventListener('load', animateSequentially);
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/261d247540.js" crossorigin="anonymous"></script>
 </html>
