Adjusted languages icon container width

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    	<div align="center" class="context text-white">
     	<h1 class="animate__animated animate__backInLeft">Alex Edwards</h1>
         <h5 class="animate__animated animate__backInRight">Full-stack Developer</h5>
-        <div class="row row-cols-4" style="font-size: 2em; margin-top: -0.25vh; padding-bottom: 0.5vh; width: 20vw;">
+        <div class="row row-cols-4" style="font-size: 2em; margin-top: -0.25vh; padding-bottom: 0.5vh; width: 30vw">
             <div class="col">
                 <i class="fab fa-php animated-icon visually-hidden"></i>
             </div>
